# derivative

./: CMakeLists.txt  LICENSE  README.md
src/: Application.hpp  Arguments.hpp  CMakeLists.txt  Integers.hpp  Mult.hpp  Parameters.hpp  Plus.hpp  Simplify.hpp  main.cpp
src/basic_operands/: Arguments.hpp  Integers.hpp  Parameters.hpp
src/basic_operations/: Exp.hpp  Inverse.hpp  List_Op_Comm.hpp  Ln.hpp  Mult.hpp  Plus.hpp  Pow.hpp
src/lib/basic_operands/: Arguments.hpp  Integers.hpp  Parameters.hpp  Vector2.hpp  Vector3.hpp
src/lib/basic_operations/: DotVec2.hpp  DotVec3.hpp  Exp.hpp  Inverse.hpp  List_Op_Comm.hpp  Ln.hpp  Mult.hpp  MultVec2.hpp  MultVec3.hpp  Plus.hpp  PlusVec2.hpp  PlusVec3.hpp  Pow.hpp
src/lib/differential/: Derivative.hpp
src/lib/graph/: Leaf.hpp  Node.hpp  NodeList.hpp
src/lib/meta/: Equals.hpp  Operations.hpp
src/lib/meta_operations/: MetaOperations.hpp
src/lib/output/: Print.hpp
src/lib/simplification/: ExpandDot.hpp  Factorization.hpp  Sort.hpp  (+2 more)
src/simplification/: Factorization.hpp  RemoveOp.hpp  Simplify.hpp  Sort.hpp
src/tests/: CMakeLists.txt
src/tests/test_exp/: CMakeLists.txt  main.cpp
src/tests/test_filters/: CMakeLists.txt  main.cpp
src/tests/test_inverse/: CMakeLists.txt  main.cpp
src/tests/test_ln/: CMakeLists.txt  main.cpp
src/tests/test_mult/: CMakeLists.txt  main.cpp
src/tests/test_plus/: CMakeLists.txt  main.cpp
src/tests/test_pow/: CMakeLists.txt  main.cpp
src/tests/test_removeop/: CMakeLists.txt
src/tests/test_sort/: CMakeLists.txt  main.cpp
src/tests/test_vector/: CMakeLists.txt  main.cpp
