add_subdirectory(test_plus/)
add_subdirectory(test_mult/)
add_subdirectory(test_inverse/)
add_subdirectory(test_exp/)
#add_subdirectory(test_ln/)
#add_subdirectory(test_pow/)
#
#add_subdirectory(test_removeop/)
#add_subdirectory(test_sort/)
#add_subdirectory(test_filters/)
#
#add_subdirectory(test_derivation/)
